[tool.poetry]
name = "p360-contact-manager"
version = "1.0.0"
description = "Public 360 application by Tieto has some issues with for example duplicated contacts. This package tries to fix that and adds other functionality like enrichment."
authors = ["Thomas Borgen <thomas.borgen@greenbird.com>"]

license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/greenbird/p360-contact-manager"

keywords = [
  "Public 360",
  "Contact Manager",
  "Contact Duplication fix",
  "Contact Enrichment",
  "Functional Programming",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
returns = "^0.11.0"
dependencies = "^0.15.0"
iso3166 = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
wemake-python-styleguide = "^0.14.0"
mypy = "^0.740.0"
isort = "4.3.21"
mkdocs-material = "^5.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
